# investing-algorithm-framework

./: .bumpversion.cfg  .flake8  .gitattributes  .gitignore  .pypirc  .travis.yml  AUTHORS  AUTHORS.md  CONTRIBUTING.md  INSTALL  INSTALL.md  LICENSE  MANIFEST.in  README.md  Remove_states_from_context.patch  __init__.py  _verify_fixes.py  codecov.yml  config.json.example  main.py  manage.py  pyproject.toml  requirements-build.txt  requirements-test.txt  requirements.txt  secret-files.tar.enc  setup.py  show_docs.sh  squad.config.ts  test.py  version.py
.github/ISSUE_TEMPLATE/: config.yml  new_feature.yml  new_test.yml  test_improvement.yml
.github/workflows/: build-docusaurus.yml  build.yml  deploy-docs.yml  publish.yml  python-app.yml  test.yml
.squad/: .first-run  ceremonies.md  config.json  decisions.md  routing.md  team.md
.squad/casting/: history.json  policy.json  registry.json
.squad/identity/: now.md  wisdom.md
bot/: __init__.py  __main__.py  bot.py  constants.py  main.py  settings.py  setup.py  utils.py
bot/configuration/: __init__.py  arguments.py  bot_configuration.py  cli_options.py  configuration.py  load_config.py  resolvers.py
bot/context/: __init__.py  analyzing_state.py  bot_context.py  bot_state.py  data_providing_state.py  setup_state.py
bot/core/: exceptions.py  utils.py
bot/data/: __init__.py  data_provider_executor.py  data_provider_manager.py  executors.py
ci/: test.sh  upload_package.py
core/: plugin_resolver.py
docs/: 404.html  AUTHORS.md  CONTRIBUTING.md  INSTALL.md  PULL_REQUEST_TEMPLATE.md  STYLE_GUIDE.md  docusaurus.config.js  index.html  package-lock.json  package.json  sidebars.js  sitemap.xml
docusaurus/: docusaurus.config.js  package-lock.json  package.json  sidebar.js  sidebars.js
examples/: app.py  app_with_class_based_strategies.py  app_with_in_memory_db.py  app_with_rest_api.py  app_with_tasks_example.py  app_with_tasks_stateless.py  app_without_strategies.py  backtest_report.html  bitvavo_trading_bot.py  coinbase_trading_bot.py  download_data.py  evaluation-example.ipynb  open.py  pipeline_momentum_screener.py  simple_trading_bot_example.py  test.ipynb  test.py  web_app.py
examples/rust_vs_python_benchmark/rust_bench/: Cargo.toml
examples/rust_vs_python_benchmark/rust_bench/src/: main.rs
frontend/: next.config.js  package-lock.json  package.json
investing_algorithm_framework/: __init__.py  __main__.py  create_app.py  dependency_container.py  download_data.py  exceptions.py  globals.py  main.py  management.py  setup_logging.py  test.py  version.py
investing_bot_framework/: __init__.py  __main__.py  main.py
scripts/: bench_487.py  bench_540_phase2.py  check_pypi_names.sh  setup_discord.py
static/: 404.html  index.html  sitemap.xml
tests/: __init__.py  conftest.py  data_test.py  test_app.py  test_create_app.py  test_download.py  test_examples_imports.py  test_orchestrator.py  test_singleton.py  utils.py
(+2484 files in other folders)
