[tool.poetry]
name = "investing-algorithm-framework"
version = "v3.0.0"
description = "A framework for creating trading bots"
authors = ["MDUYN"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
wrapt = "^1.16.0"
Flask = "^2.3.2"
Flask-Migrate = "^2.6.0"
Flask-Cors = "^3.0.9"
SQLAlchemy = "^2.0.18"
marshmallow = "^3.5.0"
ccxt = "^4.2.48"
python-dateutil = "^2.8.2"
MarkupSafe = "^2.1.2"
dependency-injector= "^4.40.0"
schedule = "^1.1.0"
tqdm = "^4.66.1"
tabulate = "^0.9.0"
polars = { version = "^0.20.10", extras = ["numpy", "pandas"] }

[tool.poetry.group.test.dependencies]
coverage= "7.4.2"
flake8 = "7.0.0"
Flask-Testing = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"