[tool.poetry]
name = "investing-algorithm-framework"
version = "v6.6.1"
description = "A framework for creating trading bots"
authors = ["MDUYN"]
readme = "README.md"
exclude = ["tests", "static", "examples", "docs"]


[tool.poetry.dependencies]
python = ">=3.10"
wrapt = ">=1.16.0"
Flask = ">=3.1.0"
Flask-Migrate = ">=2.6.0"
Flask-Cors = ">=3.0.9,<5.0.0"
SQLAlchemy = ">=2.0.18"
marshmallow = ">=3.5.0"
ccxt = ">=4.2.48"
python-dateutil = ">=2.8.2"
dependency-injector= ">=4.40.0"
schedule = ">=1.1.0"
tqdm = ">=4.66.1"
tabulate = ">=0.9.0"
polars = { version = ">=0.20.10", extras = ["numpy", "pandas"] }
jupyter = ">=1.0.0"
azure-storage-blob = "^12.24.0"
azure-identity = "^1.19.0"
azure-mgmt-storage = "^21.2.1"
azure-mgmt-web = "^7.3.1"
azure-mgmt-resource = "^23.2.0"
python-dotenv = "^1.0.1"
pyarrow = ">=19.0.1"
yfinance = "^0.2.61"

[tool.poetry.group.test.dependencies]
coverage= "7.4.2"
flake8 = "7.0.0"
Flask-Testing = "^0.8.1"
pyindicators = "0.9.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
investing-algorithm-framework = "investing_algorithm_framework.cli.cli:cli"
